chore: Rename package name to postcss-plugin-sorting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "postcss-sorting",
+	"name": "postcss-plugin-sorting",
 	"version": "7.0.1",
 	"description": "PostCSS plugin to keep rules and atrule content in order.",
 	"keywords": [
